syntax = "proto3";

option csharp_namespace = "Meteor.Sessions.Api.Grpc";

package meteor.sessions;

service SessionsService {
}
